[project]
name = "expense-bot"
version = "0.1.0"
description = "AI-powered Telegram expense tracking bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=22.0",
    "SQLAlchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "APScheduler>=3.10.4",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
analytics = [
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "openpyxl>=3.1.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
expense-bot = "expense_bot.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expense_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
